# citch

./: .SRCINFO  .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  citch-1.0.0-1-x86_64.pkg.tar.zst  citch.cpp  install.sh
citch/: FETCH_HEAD  config  packed-refs
citch/objects/pack/: pack-705a3861f6165a3e87143897540fbe1cf1741697.idx  pack-705a3861f6165a3e87143897540fbe1cf1741697.pack  pack-705a3861f6165a3e87143897540fbe1cf1741697.rev  pack-e3396a329260634c7f0b5bdab431d2e1928912a0.idx  pack-e3396a329260634c7f0b5bdab431d2e1928912a0.pack  pack-e3396a329260634c7f0b5bdab431d2e1928912a0.rev
modules/: banners.cpp  fetch.h
